[workspace]
resolver = "2"
members = [
    "crates/forge3d",
    "examples/obj_viewer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.94.0"

[workspace.dependencies]
wgpu = "29"
winit = "0.30"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
tobj = { version = "4", features = ["async"] }
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
anyhow = "1"
