[package]
name = "forge3d"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A cross-platform 3D rendering library built on wgpu"

[dependencies]
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
tobj.workspace = true
log.workspace = true
pollster.workspace = true
image.workspace = true
hecs.workspace = true
rodio.workspace = true
